// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon component all icons ArrowBack icon renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="Icon -sizeRegular"
  data-testid="ArrowBack"
  viewBox="0 0 24 24"
>
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
  <path
    d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
  />
</svg>
`;

exports[`Icon component all icons Close icon renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="Icon -sizeRegular"
  data-testid="Close"
  viewBox="0 0 24 24"
>
  <path
    d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
  />
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
</svg>
`;

exports[`Icon component all icons Event icon renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="Icon -sizeRegular"
  data-testid="Event"
  viewBox="0 0 24 24"
>
  <path
    d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19a2 2 0 002 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z"
  />
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
</svg>
`;

exports[`Icon component all icons Search icon renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="Icon -sizeRegular"
  data-testid="Search"
  viewBox="0 0 24 24"
>
  <path
    d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0016 9.5 6.5 6.5 0 109.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
  />
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
</svg>
`;

exports[`Icon component all icons Tune icon renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="Icon -sizeRegular"
  data-testid="Tune"
  viewBox="0 0 24 24"
>
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
  <path
    d="M3 17v2h6v-2H3zM3 5v2h10V5H3zm10 16v-2h8v-2h-8v-2h-2v6h2zM7 9v2H3v2h4v2h2V9H7zm14 4v-2H11v2h10zm-6-4h2V7h4V5h-4V3h-2v6z"
  />
</svg>
`;
